Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6893

freeldr: Heap Assertion when starting ReactOS with custom-boot options specified via FreeLdr

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • None
    • Bootloader
    • None

    Description

      1- Start ReactOS
      2- At Bootloader, press F8
      3- Select "Custom Boot"
      4- Select "ReactOS"
      5- Fill-in the different fields
      6- Boot

      You obtain:

      Assertion '*REDZONE_HI(Block) == REDZONE_MARK' failed at /reactos/boot/freeldr/freeldr/mm/heap.c line 174

      in the debug log. Highly probable we're doing a buffer overrun.

      Attachments

        Activity

          People

            hbelusca hbelusca
            hbelusca hbelusca
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: