[FREELDR] Implement HeapVerify(), fix a buffer overrun. CORE-6893 #resolve

svn path=/trunk/; revision=58341